# shelly_exporter

./: .gitignore  Dockerfile  PROMPT.md  README.md  discovered_devices.yml  docker-compose.yml  extract_discovered.py  pyproject.toml
config/: config.yml  example.yml
development/: README.md  docker-compose.yml
development/grafana/dashboards/: shelly-exporter.json
development/prometheus/: prometheus.yml
src/shelly_exporter/: __init__.py  config.py  config_watcher.py  main.py  metrics.py  poller.py  scanner.py  shelly_client.py  web.py
src/shelly_exporter/drivers/: __init__.py  base.py  blugw_gen2.py  blugw_gen3.py  dimmer_0110vpm_g3.py  plugus_gen2.py  pluswalldimmer_gen2.py  pro2pm_gen2.py  pro4pm_gen2.py  registry.py  s1pm_gen4.py
tests/: __init__.py  conftest.py  test_additional_metrics.py  test_blugw_parsing.py  test_config_load.py  test_config_reload.py  test_dimmer_parsing.py  test_driver_selection.py  test_metrics_update.py  test_plugus_parsing.py  test_pluswalldimmer_parsing.py  test_pro2pm_parsing.py  test_pro4pm_parsing.py  test_s1pm_parsing.py  test_scanner.py
tests/fixtures/: blugw_gen2_deviceinfo.json  blugw_gen2_status.json  blugw_gen3_deviceinfo.json  blugw_gen3_status.json  dimmer_g3_deviceinfo.json  dimmer_g3_status.json  plugus_gen2_deviceinfo.json  plugus_gen2_status.json  pluswalldimmer_gen2_deviceinfo.json  pluswalldimmer_gen2_status.json  pro2pm_gen2_deviceinfo.json  pro2pm_gen2_status.json  pro4pm_gen2_deviceinfo.json  pro4pm_gen2_status.json  s1pm_gen4_deviceinfo.json  s1pm_gen4_status.json
(+1 files in other folders)
